2010-08-19  Paul Lesniewski <paul@squirrelmail.org>
	* Added several warnings that try to catch the case where someone
          tries to set the server_port to 993, which is usually a mistaken
          use of TLS/SSL (port 993 is usually for imaps, which is not
          supported; IMAP Proxy supports STARTTLS from a "normal" port,
          which is usually 143)

2010-07-26  Paul Lesniewski <paul@squirrelmail.org>
	* Updated copyrights and other administrative actions related to
          the adoption of this software by the SquirrelMail Project

2010-02-20  Dave McMurtrie  <davemcmurtrie@gmail.com>
	* common.h: Updated version to 1.2.7

2009-10-16  Dave McMurtrie  <davemcmurtrie@gmail.com>
	* main.c: Applied patch by Jose Luis Tallon to fix compiler warnings.
          Applied patch by Jose Luis Tallon to provide for default config
	  options.  Applied patch by Jose Luis Tallon to improve server
	  connect retry logic.

	* request.c: Applied patch by Jose Luis Tallon to fix compiler
          warnings.

	* select.c: Applied patch by Jose Luis Tallon to fix broken syslog
          call.

	* config.c: Applied patch by Jose Luis Tallon to provide for default
	  config options.  Applied patch by Jose Luis Tallon to improve server
	  connect retry logic. 

	* imapproxy.h: Applied patch by Jose Luis Tallon to provide for default
	  config options.  Applied patch by Jose Luis Tallon to improve server
	  connect retry logic.

2009-01-12  Dave McMurtrie  <davemcmurtrie@gmail.com>
	* main.c: Applied patch by Michael M. Slusarz to add XIMAPPROXY
	  to capability string (fixed patch).

	* common.h: updated version to 1.2.7rc2

2008-10-20  Dave McMurtrie  <davemcmurtrie@gmail.com>
	* request.c: Fixed buffer overflow condition when doing AUTH LOGIN.
	  Applied patch by Michael M. Slusarz to make internal
	  commands RFC compliant (prepend with X instead of P_).  Added
	  support for XPROXYREUSE response.
	  
	* README: Applied patch by Michael M. Slusarz to describe new